# ProjectMInd

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
ai/: __init__.py  ai_manager.py  ollama_client.py  prompt_registry.py  prompts.py  request_manager.py  response_parser.py
analysis/: __init__.py  analysis_types.py  analyzer_engine.py  ast_analyzer.py  complexity.py  dependency_mapper.py
config/: config.example.yaml  default_config.yaml
core/: __init__.py  bootstrap.py  config.py  event_bus.py  exceptions.py  interfaces.py  logger.py  registry.py  utils.py
docs/: __init__.py  changelog.py  doc_engine.py  doc_generator.py  frontmatter.py  generate_module1_pdf.py  template_engine.py
git/: __init__.py
graph/: __init__.py  graph_analyzer.py  graph_builder.py  graph_engine.py  graph_state.py
intelligence/: __init__.py
memory/: __init__.py
obsidian/: __init__.py  markdown.py  vault.py
templates/: api.md  architecture.md  bug.md  daily.md  feature.md  note.md
tests/: __init__.py  conftest.py  test_ai.py  test_analysis.py  test_bootstrap.py  test_config.py  test_docs.py  test_graph.py  test_logger.py  test_markdown.py  test_registry.py  test_vault.py  test_watcher.py
watcher/: __init__.py  events.py  file_tracker.py  filters.py  watcher.py  watcher_manager.py
